--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="bn">
 <head>
@@ -18,11 +17,6 @@
     .button:hover { background-color: #45a049; }
     footer { background: #333; color: white; text-align: center; padding: 10px; margin-top: 40px; }
     @media (max-width: 600px) { nav a { display: block; margin: 8px 0; } }
-    .dropdown { position: relative; display: inline-block; }
-    .dropdown-content { display: none; position: absolute; background-color: #444; min-width: 160px; z-index: 1; text-align: left; border-radius: 5px; }
-    .dropdown-content a { color: white; padding: 10px 15px; text-decoration: none; display: block; }
-    .dropdown-content a:hover { background-color: #555; }
-    .dropdown:hover .dropdown-content { display: block; }
     img { width: 100%; max-width: 400px; height: auto; border-radius: 5px; }
     form input, form textarea { width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px; margin-top: 4px; }
     form label { font-weight: bold; }
@@ -32,7 +26,10 @@
 
   <header id="home">
     <h1>Smart Digital Bangladesh</h1>
-    <p>ডিজিটাল ফাইল কিনুন সহজে — বিকাশে পেমেন্ট করুন, সাথে সাথে ফাইল হাতে পান।</p>
+    <p></p>
+<p style="text-align: center; margin-top: 20px;">
+    <a style="background-yellow: #38a169; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-size: 16px;">আপনাকে স্বাগত জানাই এবং ডিজিটাল ফাইল কিনুন সহজে — বিকাশে,রকেট ও নগদে পেমেন্ট করুন, সাথে সাথে PSD File ফাইল এবং JPG & PNG File হাতে পান।</a>
+  </p>
   </header>
 
   <nav>
@@ -45,70 +42,64 @@
   </nav>
 
   <div class="container" id="products">
-    <h2>Md. Farhad Hossain — Welcome</h2>
+    <h2>Welcome</h2>
     <div class="product-grid">
       <div class="product">
-        <h3>বাংলা লেখা কনভার্টার</h3>
-        <img src="images/OIP.WEBP" alt="">
-        <p><a href="#" class="button">মাত্রঃ ১০ টাকা</a></p>
+        <h3>বিএনপি ঈদ উল আযহার শুভেচ্ছা-PSD File & JPG File- ফাইলের সিরিয়াল নাম্বার:01 </h3>
+        <img src="images/BNP_Poster.jpg" alt="">
+        <p><a href="#" class="button payButton">মাত্রঃ ১০ টাকা</a></p>
       </div>
       <div class="product">
         <h3>নমুনা ওয়ার্ড ফাইল</h3>
         <img src="images/farhad.png" alt="নমুনা ওয়ার্ড ফাইল">
-        <p><a href="#" class="button">বিস্তারিত দেখুন</a></p>
+        <p><a href="#" class="button payButton">বিস্তারিত দেখুন</a></p>
       </div>
       <div class="product">
         <h3>নমুনা ইলাস্ট্রেটর ফাইল</h3>
         <img src="images/product3.jpg" alt="নমুনা ইলাস্ট্রেটর ফাইল">
-        <p><a href="#" class="button">বিস্তারিত দেখুন</a></p>
+        <p><a href="#" class="button payButton">বিস্তারিত দেখুন</a></p>
       </div>
       <div class="product">
         <h3>প্রয়োজনীয় ফন্ট</h3>
         <img src="images/product4.jpg" alt="প্রয়োজনীয় ফন্ট">
-        <p><a href="#" class="button">বিস্তারিত দেখুন</a></p>
+        <p><a href="#" class="button payButton">বিস্তারিত দেখুন</a></p>
       </div>
     </div>
   </div>
 
   <div class="container" id="order">
-    <h2>অর্ডার করুন</h2>
-    <form action="https://formspree.io/f/xrbkrqlk" method="POST">
-      <label for="oName">নাম:</label>
-      <input type="text" id="oName" name="name" required>
-      <label for="oPhone">মোবাইল নাম্বার:</label>
-      <input type="text" id="oPhone" name="phone" required>
-      <label for="oProduct">প্রোডাক্টের নাম:</label>
-      <input type="text" id="oProduct" name="product" required>
-      <label for="oMessage">অতিরিক্ত মন্তব্য:</label>
-      <textarea id="oMessage" name="message" rows="4"></textarea>
-      <button type="submit" class="button">অর্ডার পাঠান</button>
-    </form>
-  </div>
+    <h2><section style="background-color: #f9f9f9; padding: 30px; border-radius: 10px; max-width: 900px; margin: auto;">
+  <h2 style="color: #2c7a7b; text-align: center;">🫡 আন্তরিক শুভেচ্ছা!</h2>
+  <p style="font-size: 18px; text-align: center;">
+    আপনাকে স্বাগত জানাই <strong>Smart Digital Bangladesh</strong> ওয়েবসাইটে। 
+    আপনি এসেছেন একটি সৃজনশীল ও নির্ভরযোগ্য ডিজিটাল প্ল্যাটফর্মে — যেখানে ডিজাইন মানে শুধু কাজ নয়, বরং আপনার স্বপ্নের বাস্তবায়ন।
+  </p>
 
-  <div class="container" id="payment">
-    <h2>পেমেন্ট তথ্য দিন</h2>
-    <form action="https://formspree.io/f/xrbkrqlk" method="POST">
-      <label for="pName">আপনার নাম:</label>
-      <input type="text" id="pName" name="name" required>
-      <label for="pAmount">পেমেন্ট পরিমাণ (টাকা):</label>
-      <input type="number" id="pAmount" name="amount" required>
-      <label for="pTrx">ট্রানজেকশন আইডি:</label>
-      <input type="text" id="pTrx" name="transaction" required>
-      <label for="pProduct">প্রোডাক্টের নাম:</label>
-      <input type="text" id="pProduct" name="product" required>
-      <button type="submit" class="button">তথ্য সাবমিট করুন</button>
-    </form>
-  </div>
+  <h3 style="color: #333;">🎨 আমাদের সেবা:</h3>
+  <ul style="font-size: 16px; line-height: 1.8;">
+    <li>প্রমোশনাল ও শুভেচ্ছা পোস্টার ডিজাইন (PSD ও JPG ফাইল)</li>
+    <li>নামের স্টাইলিশ ডিজাইন ও লোগো</li>
+    <li>ওয়ার্ড ও ইলাস্ট্রেটর ফাইল (ব্যবহারের জন্য প্রস্তুত)</li>
+    <li>ঈদ, পূজা, জন্মদিন, জাতীয় দিবস ইত্যাদি উপলক্ষে পোস্টার</li>
+    <li>প্রিন্ট রেডি ব্যানার, বিজ্ঞাপন, ফ্লায়ার ডিজাইন</li>
+  </ul>
 
-  <div class="container" id="login">
-    <h2>লগইন করুন</h2>
-    <form id="loginForm">
-      <label for="email">ইমেইল:</label>
-      <input type="email" id="email" required>
-      <label for="password">পাসওয়ার্ড:</label>
-      <input type="password" id="password" required>
-      <button type="submit" class="button">লগইন</button>
-    </form>
+  <h3 style="color: #333;">💼 আপনার সুবিধা:</h3>
+  <ul style="font-size: 16px; line-height: 1.8;">
+    <li>অনলাইনে সহজ অর্ডার + মোবাইল পেমেন্ট + সরাসরি ফাইল ডাউনলোড</li>
+    <li>১০০% কাস্টম ডিজাইন ও ব্যক্তিগত যত্ন</li>
+    <li>ঘরে বসে সাশ্রয়ে মানসম্মত ডিজিটাল ফাইল সংগ্রহ</li>
+  </ul>
+
+  <p style="font-size: 17px; font-style: italic; color: #444;">
+    👨‍💼 প্রোপ্রাইটর:মোঃ ফরহাদ হোসাইন <br>
+	
+    🏆 আপনার আস্থাই আমাদের শক্তি। <br>
+	আপনার পাশে থাকতে পারা আমাদের গর্ব।
+  </p>
+
+  
+</section>
     <p id="loginMessage" style="margin-top:10px;font-weight:bold;"></p>
   </div>
 
@@ -121,39 +112,41 @@
   </div>
 
   <footer>
-    &copy; 2025 Smart Digital File Store. All rights reserved.
+    &copy; Md. Farhad Hossain. All rights reserved.
   </footer>
 
   <div id="bkashModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.6); z-index:9999;">
     <div style="background:white; max-width:500px; margin:100px auto; padding:20px; border-radius:10px; position:relative;">
       <h3 style="text-align:center;">পেমেন্ট সাবমিশন</h3>
-      <p>➤ আপনি বিকাশে নিচের নাম্বারে টাকা পাঠিয়ে নিচের ফর্মটি পূরণ করুন।</p>
+      <p>➤ আপনি বিকাশে নিচের নাম্বারে টাকা পাঠিয়ে নিচের ফর্মটি পূরণ করুন</p>
       <p style="background:#f4f4f4;padding:10px;border-left:4px solid #4CAF50;"><strong>বিকাশ নম্বর:</strong> 01755332217</p>
-      <form>
-        <label>আপনার নাম:</label>
-        <input type="text" required>
+      <form id="bkashForm" action="https://formspree.io/f/xrbkrqlk" method="POST">
+        <label>আপনার নাম & ফাইলের সিরিয়াল নাম্বার:</label>
+        <input type="text" id="bkashName" name="name" required>
         <label>বিকাশ নাম্বার (যে নাম্বার থেকে পাঠানো হয়েছে):</label>
-        <input type="text" required>
+        <input type="text" id="bkashPhone" name="phone" required>
         <label>ট্রানজেকশন আইডি:</label>
-        <input type="text" required>
+        <input type="text" id="bkashTrx" name="transaction" required>
         <label>আপনার ইমেইল (যেখানে ফাইল যাবে):</label>
-        <input type="email" required>
+        <input type="email" id="bkashEmail" name="email" required>
         <button type="submit" class="button">সাবমিট করুন</button>
+		এবং উক্ত বিকাশ নাম্বার ও ট্রানজেকশন নাম্বার মিল পাওয়া গেলে ১২ ঘন্টার মধ্যে আপনার দেওয়া ইমেইলে ফাইল পাঠানো হবে।
       </form>
-      <p id="bkashMsg" style="font-weight:bold; color:green; margin-top:10px;"></p>
-      <button onclick="document.getElementById('bkashModal').style.display='none'" class="button" style="background:#f44336; margin-top:10px;">বন্ধ করুন</button>
+    <button onclick="document.getElementById('bkashModal').style.display='none'" class="button" style="background:#f44336; margin-top:10px;">বন্ধ করুন</button>
     </div>
   </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      document.querySelectorAll('a.button').forEach(button => {
+      // শুধুমাত্র payButton ক্লাসযুক্ত বাটনে ক্লিক করলে মডাল দেখাবে
+      document.querySelectorAll('a.payButton').forEach(button => {
         button.addEventListener("click", function(e) {
           e.preventDefault();
           document.getElementById("bkashModal").style.display = "block";
         });
       });
 
+      // লগইন ফর্ম হ্যান্ডলার
       document.getElementById("loginForm").addEventListener("submit", function(e){
         e.preventDefault();
         const email = document.getElementById("email").value;
